--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# Logs
-logs
+# Dependências
+node_modules/
+package-lock.json
+yarn.lock
+
+# Arquivos de build
+build/
+dist/
+*.local/
+
+# Ambientes
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Arquivos de configuração específicos de editores
+.vscode/
+.idea/
+
+# Arquivos temporários
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +27,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Arquivos de configuração do sistema
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Outros arquivos específicos do projeto
+*.cache/
+*.pid
